# zania-huaxing

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  example.env  main.py  pyproject.toml  streamlit_app.py
.github/workflows/: test.yml
app/: database.py  document_loader.py  main.py  rag_chain.py  schemas.py
example_input/: Sample JSON.xlsx - Sheet1.csv
tests/: conftest.py  test_document_loader.py  test_rag_chain.py
